swagger working with files on docs
