# src/swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "RentalX Documentation",
+    "title": "RentlX Documentation",
     "description": "This is an API Rent",
     "version": "1.0",
     "contact": {
@@ -37,7 +37,7 @@
             }
           }
         },
-        "response": {
+        "responses": {
           "201": {
             "description": "Created"
           },
@@ -52,22 +52,21 @@
         ],
         "summary": "Get all categories",
         "description": "Get all categories",
-        "response": {
+        "responses": {
           "200": {
             "description": "Success",
-            "content":{
-              "application/json":{
-                "schema":{
+            "content": {
+              "application/json": {
+                "schema": {
                   "type": "array",
-                  "items":{
-                    "type":"object",
-                    "properties":{
-                      "name":{
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "name": {
                         "type": "string"
                       },
-                      "description":{
+                      "description": {
                         "type": "string"
-
                       }
                     }
                   }
@@ -76,6 +75,70 @@
             }
           }
         }
+      }
+    },
+    "/categories/import": {
+      "post": {
+        "tags": [
+          "Category"
+        ],
+        "summary": "Upload a CSV fille with categories ",
+        "description": "Upload a CSV fille with categories",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/specifications:": {
+      "post": {
+        "tags": [
+          "Specification"
+        ],
+        "summary": "Create a specification",
+        "description": "Create a new specification",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Specification"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Specification already exists"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Specification": {
+      "type": "object",
+      "properties": {
+        "name": "string",
+        "description": "string"
       }
     }
   }
